Fix project modal styling and spacing

--- a/src/components/ProjectModal/ProjectModal.scss
+++ b/src/components/ProjectModal/ProjectModal.scss
@@ -8,8 +8,8 @@
   justify-content: center;
   align-items: center;
   z-index: 1001; /* Sit on top */
-  width: 100vw; /* Full width */
-  height: 100vh; /* Full height */
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
   background-color: $button-background-primary; /* Fallback color */
   background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
 
@@ -20,19 +20,22 @@
 
   &__overlay {
     position: fixed; /* Stay in place */
-    width: 100vw; /* Full width */
-    height: 100vh; /* Full height */
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
     z-index: 1002;
   }
 
   &__container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     position: relative;
     gap: 1rem;
     height: 85%;
     width: 90%;
     background-color: $background-primary;
     z-index: 1002;
-    overflow: auto;
+    overflow-y: scroll;
 
     @include tablet {
       height: 80%;
